--- a/deeplearning4j-core/pom.xml
+++ b/deeplearning4j-core/pom.xml
@@ -55,6 +55,11 @@
                 <artifactId>nd4j-common</artifactId>
                 <version>${nd4j.version}</version>
             </dependency>
+             <dependency>
+   				<groupId>org.nd4j</groupId>
+   				<artifactId>nd4j-native-platform</artifactId>
+   				<version>${nd4j.version}</version>
+ 			</dependency>
             <dependency>
                 <groupId>org.nd4j</groupId>
                 <artifactId>nd4j-cuda-8.0</artifactId>
